--- a/src/app/components/chat/chat.page.html
+++ b/src/app/components/chat/chat.page.html
@@ -123,5 +123,12 @@
         </ion-card-content>
       </ion-card>
     </div>
+    <div *ngIf="!isLoad">
+      <ion-skeleton-text width=40px></ion-skeleton-text>
+      <ion-skeleton-text width=200px></ion-skeleton-text>
+      <ion-skeleton-text width=600px></ion-skeleton-text>
+      <ion-skeleton-text width=100px></ion-skeleton-text>
+      <ion-skeleton-text width=80px></ion-skeleton-text>
+    </div>
   </ng-template>
 </ion-content>
