--- a/src/app/components/general/filter-adviser/filter-adviser.component.html
+++ b/src/app/components/general/filter-adviser/filter-adviser.component.html
@@ -1,17 +1,29 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons *ngIf="!isDesktop" slot="start">
-      <ion-button (click)="applyFilters(); goBack()" slot="start">
-        <ion-icon mode="md" slot="icon-only" name="arrow-back"></ion-icon>
+    <ion-buttons *ngIf="!isDesktop"
+                 slot="start">
+      <ion-button (click)="applyFilters(); goBack()"
+                  slot="start">
+        <ion-icon mode="md"
+                  slot="icon-only"
+                  name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>Filtros</ion-title>
     <ion-buttons slot="end">
-      <ion-button color="success" slot="end" (click)="applyFilters(); goBack()">
-        <ion-icon mode="md" slot="icon-only" name="checkmark-circle"></ion-icon>
+      <ion-button color="success"
+                  slot="end"
+                  (click)="applyFilters(); goBack()">
+        <ion-icon mode="md"
+                  slot="icon-only"
+                  name="checkmark-circle"></ion-icon>
       </ion-button>
-      <ion-button color="danger" slot="end" (click)="reset(); goBack()">
-        <ion-icon mode="md" slot="icon-only" name="trash"></ion-icon>
+      <ion-button color="danger"
+                  slot="end"
+                  (click)="reset(); goBack()">
+        <ion-icon mode="md"
+                  slot="icon-only"
+                  name="trash"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -19,31 +31,30 @@
 <div class="main">
   <!-- <ion-content fullscreen> -->
   <ion-list>
-    <ion-list-header> <ion-label>Fecha</ion-label> </ion-list-header>
+    <ion-list-header>
+      <ion-label>Fecha</ion-label>
+    </ion-list-header>
   </ion-list>
   <ion-item>
     <ion-label> Dia </ion-label>
-    <ion-input
-      (ionChange)="applyFilters()"
-      (onkeyup)="applyFilters()"
-      type="number"
-      [(ngModel)]="dayInput"
-      #day="ngModel"
-      id="day"
-      name="day"
-    ></ion-input>
+    <ion-input (ionChange)="applyFilters()"
+               (onkeyup)="applyFilters()"
+               type="number"
+               [(ngModel)]="dayInput"
+               #day="ngModel"
+               id="day"
+               name="day"></ion-input>
   </ion-item>
   <ion-item>
     <mat-form-field>
-      <mat-select
-        (selectionChange)="applyFilters()"
-        [(ngModel)]="monthInput"
-        #day="ngModel"
-        id="day"
-        name="day"
-        placeholder="Mes"
-      >
-        <mat-option *ngFor="let month of months; let i = index" [value]="i">
+      <mat-select (selectionChange)="applyFilters()"
+                  [(ngModel)]="monthInput"
+                  #day="ngModel"
+                  id="day"
+                  name="day"
+                  placeholder="Mes">
+        <mat-option *ngFor="let month of months; let i = index"
+                    [value]="i">
           {{ month }}
         </mat-option>
       </mat-select>
@@ -59,36 +70,46 @@
   </ion-item>
   <ion-item>
     <ion-label> Año </ion-label>
-    <ion-input
-      (ionChange)="applyFilters()"
-      type="number"
-      [(ngModel)]="yearInput"
-      #day="ngModel"
-      id="day"
-      name="day"
-    ></ion-input>
+    <ion-input (ionChange)="applyFilters()"
+               type="number"
+               [(ngModel)]="yearInput"
+               #day="ngModel"
+               id="day"
+               name="day"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label> Hora de inicio </ion-label>
-    <ion-input
-      (ionChange)="applyFilters()"
-      type="number"
-      [(ngModel)]="hourStartInput"
-      #hs="ngModel"
-      id="hs"
-      name="hs"
-    ></ion-input>
+    <ion-input (ionChange)="applyFilters()"
+               type="number"
+               [(ngModel)]="hourStartInput"
+               #hs="ngModel"
+               id="hs"
+               name="hs"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label> Hora Fin </ion-label>
-    <ion-input
-      (ionChange)="applyFilters()"
-      type="number"
-      [(ngModel)]="hourEndInput"
-      #he="ngModel"
-      id="he"
-      name="he"
-    ></ion-input>
+    <ion-input (ionChange)="applyFilters()"
+               type="number"
+               [(ngModel)]="hourEndInput"
+               #he="ngModel"
+               id="he"
+               name="he"></ion-input>
+  </ion-item>
+  <ion-item>
+    <mat-select [(ngModel)]="city"
+                #citySel="ngModel"
+                id="citySel"
+                placeholder="Ciudad"
+                (selectionChange)="applyFilters()"
+                name="citySel">
+
+      <mat-option value="puebla">
+        Puebla
+      </mat-option>
+      <mat-option value="mexico">
+        México
+      </mat-option>
+    </mat-select>
   </ion-item>
   <!-- </ion-content> -->
 </div>
